# ArkInC

./: CMakeLists.txt  LICENSE  README.md  README_SECP256K1.txt  arkapi.c  arkapi.h  arkbla.c  arkbla.h  arkcore.c  arkhelpers.c  arkhelpers.h  arkmodels.h  cmakelistsBU.txt  contributors.md  getopt.h  jsonresponse.c  jsonresponse.h  libsecp256k1-config.h  main.c  main.h
curl-7.55.1/builds/libcurl-vc-x86-release-static-ipv6-sspi-winssl-obj-curl/: curl.res
curl-7.55.1/winbuild/: CURL_OBJS.inc  LIBCURL_OBJS.inc  vc140.idb
libbtc-master/include/btc/: cstr.h  headersdb.h  net.h  portable_endian.h  utils.h
libbtc-master/src/: aes256_cbc.c  base58.c  bip32.c  net.c  random.c
libbtc-master/src/secp256k1/src/: field_impl.h  num.h  scalar.h  scalar_impl.h  secp256k1.c
libcurl/lib/: libcurl.exp  libcurl_a.lib
secp256k1/src/: gmp.h  libsecp256k1-config.h  num.h  secp256k1.c
usedThirdParty/: CURL_README.txt
